--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="style.css"> <!-- Menghubungkan file CSS terpisah -->
-    <title>About Us - Website Saya</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Website Saya</title>
 </head>
 <body>
     <!-- Navbar -->
@@ -29,24 +29,13 @@
         </div>
     </nav>
 
-
-   <!-- Isi Halaman "About Us" -->
-<section class="section">
-    <div class="container">
-        <h1 class="title">About Us</h1>
-        <div class="columns is-centered">
-            <div class="column is-half">
-                <div class="has-text-centered">
-                    <img src="penulis.jpeg" alt="Gambar Tim Kami" width="500">
-                </div>
-                <p class="subtitle has-text-centered">Nama: Hilal Fakhri Dzakwan</p>
-                <p class="subtitle has-text-centered">NPM: 1214018</p>
-                <p class="subtitle has-text-centered">Email: hilaldzakwan08@gmail.com</p>
-            </div>
+    <!-- Isi Halaman -->
+    <section class="section">
+        <div class="container">
+            <h1 class="title">Selamat datang di Reservasi Tempat Online</h1>
+            <p>saat ini anda sedang mengunjungi halaman proyek 3 Hilal Fakhri</p>
         </div>
-    </div>
-</section>
-
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
