--- a/proposal.html
+++ b/proposal.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <title>Website Saya</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Proposal - Website Saya</title>
 </head>
 <body>
-    <!-- Navbar -->
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="https://www.ulbi.ac.id/" target="_blank">
@@ -29,14 +28,14 @@
         </div>
     </nav>
 
-    <!-- Isi Halaman -->
     <section class="section">
         <div class="container">
-            <h1 class="title">Selamat datang di Reservasi Tempat Online</h1>
-            <p>saat ini anda sedang mengunjungi halaman proyek 3 Hilal Fakhri</p>
+            <h1 class="title">Proposal</h1>
+            <div id="proposal-container">
+                <!-- Data proposal akan ditampilkan di sini menggunakan JavaScript -->
+            </div>
         </div>
     </section>
-
     <!-- Footer -->
     <footer class="footer">
         <div class="content has-text-centered">
@@ -45,6 +44,7 @@
             </p>
         </div>
     </footer>
-    <script type="module" src="proposal.js"></script>
+    <script type="module" src="proposal.js"></script> <!-- Panggil script JavaScript -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </body>
 </html>
