--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Website Saya</title>
+    <title>Reservasi Tempat</title>
 </head>
 <body>
     <!-- Navbar -->
@@ -18,8 +18,10 @@
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
-            </a>
         </div>
+    </section>
+
+   
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
                 <a class="navbar-item" href="index.html">Home</a>
@@ -32,19 +34,19 @@
     <!-- Isi Halaman -->
     <section class="section">
         <div class="container">
-            <h1 class="title">Selamat datang di Reservasi Tempat Online</h1>
-            <p>saat ini anda sedang mengunjungi halaman proyek 3 Hilal Fakhri</p>
+            <div id="dexin-container">
+                <!-- Data proposal akan ditampilkan di sini menggunakan JavaScript -->
+        </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="footer">
+     <!-- Footer -->
+     <footer class="footer">
         <div class="content has-text-centered">
             <p>
                 &copy; 2023 Reservasi Tempat
             </p>
         </div>
     </footer>
-    <script type="module" src="proposal.js"></script>
+    <script type="module" src="js/dexin.js"></script>
 </body>
 </html>
