--- a/proposal.html
+++ b/proposal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Proposal - Website Saya</title>
+    <title>Proposal Reservasi Tempat</title>
 </head>
 <body>
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
@@ -44,7 +44,6 @@
             </p>
         </div>
     </footer>
-    <script type="module" src="proposal.js"></script> <!-- Panggil script JavaScript -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <script type="module" src="js/proposal.js"></script> <!-- Panggil script JavaScript -->
 </body>
 </html>
