--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="css/styles.css"> <!-- Menghubungkan file CSS terpisah -->
+    <link rel="stylesheet" href="css/styles.css">
     <title>About Us - Website Saya</title>
 </head>
 <body>
@@ -56,6 +56,6 @@
             </p>
         </div>
     </footer>
-    <script type="module" src="proposal.js"></script>
+    <script type="module" src="js/proposal.js"></script>
 </body>
 </html>
